fix footer overflow issue

--- a/app/stylesheets/sass/partials/b-footer.sass
+++ b/app/stylesheets/sass/partials/b-footer.sass
@@ -36,6 +36,7 @@
       @extend %three-eighths
 
   &__link
+    display: inline-block
     font-size: 1.143em
     margin-right: 15px
     transition: color .2s ease
